// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with Leonardo_da_Vinci 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          Leonardo da Vinci
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="footer"
  >
    <div
      className="subfooter subfooter__about-project"
    >
      <div
        className="subfooter__title"
      >
        ABOUT PROJECT
      </div>
      <div
        className="subfooter__content"
      >
        This project redefines the way we use wikipedia entirely. From actual wikitext format in each article, we parse and convert it into new beautiful websites with React library.
        <a
          href="#"
        >
          Source
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__about-me"
    >
      <div
        className="subfooter__title"
      >
        ABOUT ME
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="https://github.com/"
        >
          GitHub
        </a>
        <a
          href="https://stackoverflow.com"
        >
          Stack Overflow
        </a>
        <a
          href="https://facebook.com"
        >
          Facebook
        </a>
        <a
          href="https://google.com"
        >
          Mail
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__quick-links"
    >
      <div
        className="subfooter__title"
      >
        QUICK LINKS
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="#"
        >
          Home
        </a>
        <a
          href="#"
        >
          Top of page
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with Mona_Lisa 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          Mona Lisa
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="footer"
  >
    <div
      className="subfooter subfooter__about-project"
    >
      <div
        className="subfooter__title"
      >
        ABOUT PROJECT
      </div>
      <div
        className="subfooter__content"
      >
        This project redefines the way we use wikipedia entirely. From actual wikitext format in each article, we parse and convert it into new beautiful websites with React library.
        <a
          href="#"
        >
          Source
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__about-me"
    >
      <div
        className="subfooter__title"
      >
        ABOUT ME
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="https://github.com/"
        >
          GitHub
        </a>
        <a
          href="https://stackoverflow.com"
        >
          Stack Overflow
        </a>
        <a
          href="https://facebook.com"
        >
          Facebook
        </a>
        <a
          href="https://google.com"
        >
          Mail
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__quick-links"
    >
      <div
        className="subfooter__title"
      >
        QUICK LINKS
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="#"
        >
          Home
        </a>
        <a
          href="#"
        >
          Top of page
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with New_York_City 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          New York City
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="footer"
  >
    <div
      className="subfooter subfooter__about-project"
    >
      <div
        className="subfooter__title"
      >
        ABOUT PROJECT
      </div>
      <div
        className="subfooter__content"
      >
        This project redefines the way we use wikipedia entirely. From actual wikitext format in each article, we parse and convert it into new beautiful websites with React library.
        <a
          href="#"
        >
          Source
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__about-me"
    >
      <div
        className="subfooter__title"
      >
        ABOUT ME
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="https://github.com/"
        >
          GitHub
        </a>
        <a
          href="https://stackoverflow.com"
        >
          Stack Overflow
        </a>
        <a
          href="https://facebook.com"
        >
          Facebook
        </a>
        <a
          href="https://google.com"
        >
          Mail
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__quick-links"
    >
      <div
        className="subfooter__title"
      >
        QUICK LINKS
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="#"
        >
          Home
        </a>
        <a
          href="#"
        >
          Top of page
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with Pet_door 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          Pet door
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="footer"
  >
    <div
      className="subfooter subfooter__about-project"
    >
      <div
        className="subfooter__title"
      >
        ABOUT PROJECT
      </div>
      <div
        className="subfooter__content"
      >
        This project redefines the way we use wikipedia entirely. From actual wikitext format in each article, we parse and convert it into new beautiful websites with React library.
        <a
          href="#"
        >
          Source
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__about-me"
    >
      <div
        className="subfooter__title"
      >
        ABOUT ME
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="https://github.com/"
        >
          GitHub
        </a>
        <a
          href="https://stackoverflow.com"
        >
          Stack Overflow
        </a>
        <a
          href="https://facebook.com"
        >
          Facebook
        </a>
        <a
          href="https://google.com"
        >
          Mail
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__quick-links"
    >
      <div
        className="subfooter__title"
      >
        QUICK LINKS
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="#"
        >
          Home
        </a>
        <a
          href="#"
        >
          Top of page
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with Renaissance 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          Renaissance
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="footer"
  >
    <div
      className="subfooter subfooter__about-project"
    >
      <div
        className="subfooter__title"
      >
        ABOUT PROJECT
      </div>
      <div
        className="subfooter__content"
      >
        This project redefines the way we use wikipedia entirely. From actual wikitext format in each article, we parse and convert it into new beautiful websites with React library.
        <a
          href="#"
        >
          Source
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__about-me"
    >
      <div
        className="subfooter__title"
      >
        ABOUT ME
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="https://github.com/"
        >
          GitHub
        </a>
        <a
          href="https://stackoverflow.com"
        >
          Stack Overflow
        </a>
        <a
          href="https://facebook.com"
        >
          Facebook
        </a>
        <a
          href="https://google.com"
        >
          Mail
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__quick-links"
    >
      <div
        className="subfooter__title"
      >
        QUICK LINKS
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="#"
        >
          Home
        </a>
        <a
          href="#"
        >
          Top of page
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with The_Last_Supper_(Leonardo) 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          The Last Supper (Leonardo)
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="footer"
  >
    <div
      className="subfooter subfooter__about-project"
    >
      <div
        className="subfooter__title"
      >
        ABOUT PROJECT
      </div>
      <div
        className="subfooter__content"
      >
        This project redefines the way we use wikipedia entirely. From actual wikitext format in each article, we parse and convert it into new beautiful websites with React library.
        <a
          href="#"
        >
          Source
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__about-me"
    >
      <div
        className="subfooter__title"
      >
        ABOUT ME
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="https://github.com/"
        >
          GitHub
        </a>
        <a
          href="https://stackoverflow.com"
        >
          Stack Overflow
        </a>
        <a
          href="https://facebook.com"
        >
          Facebook
        </a>
        <a
          href="https://google.com"
        >
          Mail
        </a>
      </div>
    </div>
    <div
      className="subfooter subfooter__quick-links"
    >
      <div
        className="subfooter__title"
      >
        QUICK LINKS
      </div>
      <div
        className="subfooter__content"
      >
        <a
          href="#"
        >
          Home
        </a>
        <a
          href="#"
        >
          Top of page
        </a>
      </div>
    </div>
  </div>,
]
`;
